# aqua-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  allsamples.bat  aqua-engine.sln  aqua-engine.vcxproj  aqua-engine.vcxproj.filters  vcpkg.json
.github/workflows/: cmake-single-platform.yml  codeql.yml  fbxsdk.yml
aqua-engine/: CMakeLists.txt  aqua-engine.sln  aqua-engine.vcxproj
aqua-engine/engine/directx/wrapper/: Device.cpp  Device.h  Factory.cpp  Factory.h
aqua-engine/engine/include/directx/wrapper/: Device.h  Factory.h
aqua-engine/engine/src/directx/wrapper/: Device.cpp  Factory.cpp
aqua-engine/include/: AquaEngine.h
aqua-engine/include/directx/: BackBuffers.h  Camera.h  DirectionLight.h  Display.h  MultiPassRenderer.cpp  MultiPassRenderer.h  PipelineState.h  PointLight.h  RenderTarget.h  RootSignature.h  ShaderObject.h  TextureManager.h  Util.h
aqua-engine/include/directx/buffer/: Buffer.h  BufferView.h  ConstantBufferView.h  DepthStencilView.h  GPUBuffer.h  IBufferView.h  RenderTargetView.h  ShaderResourceView.h  UnorderedAccessView.h
aqua-engine/include/directx/descriptor_heap/: DescriptorHeapSegment.h  DescriptorHeapSegmentManager.h  GlobalDescriptorHeap.h  GlobalDescriptorHeapManager.h  HeapID.h  ShaderGlobalDescriptorHeap.h
aqua-engine/include/directx/mesh/: FBXModel.h  Mesh.h  Polygon.h  Rectangle.h  RectangleTexture.h  SkyBox.h  Triangle.h
aqua-engine/include/directx/mesh/fbx/: FBXModel.h  FBXSceneContext.h
aqua-engine/include/directx/wrapper/: Barrier.h  Command.h  DescriptorHeap.h  Device.h  Factory.h  Fence.h  SwapChain.h
aqua-engine/include/fbx/: FBXManager.h
aqua-engine/sample/: sample.vcxproj  sample.vcxproj.filters
aqua-engine/src/directx/: BackBuffers.cpp  Camera.cpp  ComputePipeline.cpp  DirectionLight.cpp  Display.cpp  MultiPassRenderer.cpp  PipelineState.cpp  PointLight.cpp  RenderTarget.cpp  RootSignature.cpp  ShaderObject.cpp  TextureManager.cpp  TransformMatrix.cpp
aqua-engine/src/directx/buffer/: Buffer.cpp  BufferView.cpp  ConstantBufferView.cpp  DepthStencilView.cpp  GPUBuffer.cpp  IBufferView.cpp  RenderTargetView.cpp  ShaderResourceView.cpp  UnorderedAccessView.cpp
aqua-engine/src/directx/descriptor_heap/: DescriptorHeapSegment.cpp  DescriptorHeapSegmentManager.cpp  GlobalDescriptorHeap.cpp  GlobalDescriptorHeapManager.cpp  ShaderGlobalDescriptorHeap.cpp
aqua-engine/src/directx/light/: DirectionLight.cpp  PointLight.cpp  SpotLight.cpp
aqua-engine/src/directx/mesh/: FBXModel.cpp  Mesh.cpp  Polygon.cpp  Rectangle.cpp  RectangleTexture.cpp  SkyBox.cpp  Triangle.cpp  skybox.hlsl
aqua-engine/src/directx/mesh/fbx/: FBXModel.cpp  FBXSceneContext.cpp
aqua-engine/src/directx/wrapper/: Barrier.cpp  Command.cpp  DescriptorHeap.cpp  Device.cpp  Factory.cpp  Fence.cpp  SwapChain.cpp
aqua-engine/src/fbx/: FBXManager.cpp
aqua-engine/test/: test.vcxproj
engine/: CMakeLists.txt
engine/include/directx/wrapper/: Device.h  Factory.h
sample/background/: Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  shader.hlsl  skybox.hlsl
sample/blend/: Graphics.cpp  Graphics.h  rect.hlsl
sample/blur/: Graphics.cpp  Graphics.h  main.cpp  rt1.hlsl
sample/collision/: BaseWindow.h  Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  main.cpp  shader.hlsl
sample/cubemap/: main.cpp
sample/d2d/: Graphics.cpp  Graphics.h  MainWindow.cpp  all.hlsl
sample/display/: main.cpp
sample/effect/: Graphics.cpp  Graphics.h  main.cpp
sample/fbx/: Graphics.cpp  Graphics.h  main.cpp  ps.hlsl  type.hlsli  vs.hlsl
sample/light/: Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  main.cpp  ps.hlsl  shader.hlsl  vs.hlsl
sample/nowloading/: Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  main.cpp  shader.hlsl
sample/point-light/: Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  shader.hlsl
sample/spot-light/: BaseWindow.h  Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  main.cpp  shader.hlsl
sample/texture/: Graphics.cpp  Graphics.h  main.cpp  ps.hlsl  type.hlsli  vs.hlsl
sample/triangle/: main.cpp  vs.hlsl
test/: CMakeLists.txt  test.vcxproj
test/engine/directx/: BackBuffers.cpp  Display.cpp  PipelineState.cpp  RootSignature.cpp  ShaderObject.cpp  TextureManager.cpp  ps.hlsl  vs.hlsl
test/engine/directx/buffer/: Buffer.cpp  BufferView.cpp  GPUBuffer.cpp
test/engine/directx/descriptor_heap/: GlobalDescriptorHeap.cpp
test/engine/directx/mesh/: FBX.cpp  Polygon.cpp  PolygonTexture.cpp
test/engine/directx/wrapper/: Barrier.cpp  Command.cpp  DescriptorHeap.cpp  Device.cpp  Factory.cpp  Fence.cpp  SwapChain.cpp
